# databao

./: .pre-commit-config.yaml  README.md  RELEASE.md  example.ipynb  example.py  portus.py  pyproject.toml  requirements.txt
.github/workflows/: pre-commit.yml  publish.yml  pytest.yml
databao/: api.py
databao/agents/: base.py
databao/agents/frontend/: text_frontend.py
databao/agents/lighthouse/: agent.py  graph.py
databao/agents/react_duckdb/: agent.py
databao/caches/: disk_cache.py  in_mem_cache.py
databao/configs/: llm.py
databao/core/: agent.py  cache.py  data_source.py  executor.py  pipe.py  session.py  thread.py
databao/duckdb/: react_tools.py  utils.py
databao/executors/: base.py
databao/executors/lighthouse/: executor.py  graph.py  history_cleaning.py  system_prompt.jinja
databao/executors/react_duckdb/: executor.py
databao/visualizers/: vega_chat.py
examples/: demo.ipynb  demo.py  ecom-customers.ipynb  latency.py  web_shop_orders_databao_example.ipynb
examples/configs/: gpt-oss-20b-ollama.yaml  qwen3-8b-oai.yaml  qwen3-8b-ollama.yaml
examples/data/: segment_marketing_plan.csv
examples/web_shop_orders/: web_shop_orders_databao_preparation_demo.ipynb  web_shop_orders_databao_reporting_demo.ipynb
examples/web_shop_orders/context/: duckdb_schema_overview.md
examples/web_shop_orders/source-data/: webshop_customers.csv  webshop_geolocation.csv  webshop_order_items.csv  webshop_order_payments.csv  webshop_order_reviews.csv  webshop_orders.csv  webshop_product_category_name_translation.csv  webshop_products.csv  webshop_sellers.csv
portus/: __init__.py  api.py  data_executor.py  duck_db.py  pipe.py  result.py  session.py
portus/agents/lighthouse/: agent.py  graph.py
portus/caches/: in_mem_cache.py
portus/core/: cache.py  opa.py  pipe.py  session.py  visualizer.py
portus/duckdb/: agent.py  agents.py  utils.py
portus/pipes/: lazy.py
tests/: test_agent.py  test_demo_smoke.py  test_disk_cache.py  test_llms.py  test_session.py  test_sql_with_limit.py  test_text_frontend.py  test_vega_chat.py  test_visualisation_result.py
