[project]
name = "portus"
version = "0.0.1"
description = "portus by JetBrains"
readme = "README.md"
authors = []
requires-python = ">=3.12.9"
dependencies = [
    "pandas>=2.3.0",
    "pydantic>=2.8.0,<3",
    "langgraph>=0.6.8",
    "langchain>=0.3.20,<0.4",
    "langchain-openai>=0.3.8,<0.4",
    "langchain-anthropic>=0.3.10,<0.4",
    "langchain-ollama>=0.3.10",
    "duckdb>=1.3.0",
    "jinja2>=3.1.6",
    "tabulate>=0.9.0",
    "psycopg2-binary>=2.9.10",
    "matplotlib>=3.10.6",
]

[project.optional-dependencies]
examples = [
    "notebook>=7.4.7",
    "python-dotenv>=1.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pandas-stubs>=2.3.2.250926",
    "pre-commit>=4.3.0",
    "pytest>=7.4.0",
    "ruff>=0.13.2",
    "types-pyyaml>=6.0.12.20250915",
]

[tool.mypy]
strict = true
show_error_codes = true
files = ["portus", "tests", "examples"]
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
